# hydro1.0

./: .gitignore  ADAPTIVE_PID_IMPLEMENTATION_PLAN.md  ADAPTIVE_PID_SCREENS_VALIDATION.md  ADAPTIVE_PID_SESSION_REPORT.md  ADAPTIVE_PID_USER_GUIDE.md  ARCHITECTURE_ANALYSIS_AND_REFACTORING.md  ARCHITECTURE_REFACTORING_REPORT.md  BUGFIXES_REPORT.md  BUG_REPORT_TEMPLATE.md  BUILD_FLASH_MONITOR_ALGORITHM.md  BUILD_SUCCESS_FINAL_REPORT.md  BUILD_SUCCESS_REPORT.md  CCS811_IMPLEMENTATION.md  CHANGELOG_SYSTEM_SETTINGS.md  CMakeLists.txt  CODE_ANALYSIS_REPORT.md  ENCODER_FOCUS_FIX.md  ENCODER_INTEGRATION_COMPLETE.md  ENCODER_LVGL_INTEGRATION.md  ENCODER_LVGL_INTEGRATION_RU.md  ENCODER_OPTIMIZATION_REPORT.md  ENCODER_SENSITIVITY_FIX.md  ENCODER_SENSITIVITY_FIX_RU.md  ENCODER_SETTINGS_FIX.md  ENVIRONMENT_CHECK.md  FILES_CREATED.md  FINAL_IMPROVEMENTS_REPORT.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_PROJECT_CHECK.md  FINAL_STABILITY_REPORT.md  FIX_SET_BUTTON_FOCUS.md  FIX_SUMMARY.md  FONT_CYRILLIC_REPORT.md  FREE_COM5_USAGE.md  FULL_ARCHITECTURE_IMPLEMENTATION_PLAN.md  FULL_IMPLEMENTATION_COMPLETE.md  HOW_TO_REPORT_BUGS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_STATUS_WEEK1.md  (+162 more)
components/adaptive_pid/: CMakeLists.txt  adaptive_pid.c  adaptive_pid.h
components/ai_controller/: CMakeLists.txt  ai_controller.c  ai_controller.h
components/automation_controller/: CMakeLists.txt  automation_controller.c  automation_controller.h
components/ccs811/: CMakeLists.txt  ccs811.c  ccs811.h
components/config_manager/: CMakeLists.txt  config_manager.c  config_manager.h
components/data_logger/: CMakeLists.txt  data_logger.c  data_logger.h
components/encoder/: CMakeLists.txt  encoder.c  encoder.h
components/error_handler/: CMakeLists.txt  DOCS_INDEX.md  ERROR_CHEATSHEET_RU.md  ERROR_CODES_RU.md  EXAMPLES_RU.md  README.md  error_handler.c  error_handler.h
components/hydro_settings/: CMakeLists.txt  hydro_settings.c  hydro_settings.h
components/i2c_bus/: CMakeLists.txt  i2c_bus.c  i2c_bus.h  test_i2c_bus.c  test_i2c_bus.h
components/lcd_ili9341/: CMakeLists.txt  lcd_ili9341.c  lcd_ili9341.h
components/lvgl_main/: CMakeLists.txt  lvgl_encoder.c  lvgl_encoder.h  lvgl_main.c  lvgl_main.h
components/lvgl_ui/: CMakeLists.txt  EXAMPLE_USAGE.c  SYSTEM_SETTINGS.md  lvgl_styles.h  lvgl_ui.c  lvgl_ui.h  ph_screen.c  ph_screen.h  ui_manager.c  ui_manager.h
components/lvgl_ui/screen_manager/: BUG_FIXES_REPORT.md  BUG_REPORT_CRITICAL.md  ENCODER_FOCUS_GUIDE.md  FINAL_FIX_SUMMARY.md  LOGIC_REVIEW.md  README.md  THREAD_SAFETY_REPORT.md  UI_FIXES_REPORT.md  screen_init.c  screen_init.h  screen_lifecycle.c  screen_lifecycle.h  screen_manager.c  screen_manager.h  screen_navigator.c  screen_navigator.h  screen_registry.c  screen_registry.h  screen_types.h
components/lvgl_ui/screens/: main_screen.c  main_screen.h  notification_screen.c  notification_screen.h  popup_screen.c  popup_screen.h
components/lvgl_ui/screens/adaptive/: pid_auto_tune_screen.c  pid_auto_tune_screen.h  pid_intelligent_dashboard.c  pid_intelligent_dashboard.h  pid_intelligent_detail.c  pid_intelligent_detail.h
components/lvgl_ui/screens/base/: screen_base.c  screen_base.h  screen_template.c  screen_template.h
components/lvgl_ui/screens/pid/: pid_advanced_screen.c  pid_advanced_screen.h  pid_detail_screen.c  pid_detail_screen.h  pid_graph_screen.c  pid_graph_screen.h  pid_main_screen.c  pid_main_screen.h  pid_thresholds_screen.c  pid_thresholds_screen.h  pid_tuning_screen.c  pid_tuning_screen.h
components/lvgl_ui/screens/pumps/: pump_calibration_screen.c  pump_calibration_screen.h  pumps_manual_screen.c  pumps_manual_screen.h  pumps_menu_screen.c  pumps_menu_screen.h  pumps_status_screen.c  pumps_status_screen.h
components/lvgl_ui/screens/sensor/: sensor_detail_screen.c  sensor_detail_screen.h  sensor_settings_screen.c  sensor_settings_screen.h
components/lvgl_ui/screens/settings/: ALL_SETTINGS_SCREENS.c  settings_iot_menu.c  settings_iot_menu.h  settings_main_screen.c  settings_main_screen.h  settings_mqtt_screen.c  settings_mqtt_screen.h  settings_wifi_screen.c  settings_wifi_screen.h
components/lvgl_ui/screens/system/: system_menu_screen.c  system_menu_screen.h  system_screens.c  system_screens.h  wifi_settings_screen.c  wifi_settings_screen.h
components/lvgl_ui/widgets/: back_button.c  back_button.h  encoder_value_edit.c  encoder_value_edit.h  event_helpers.h  intelligent_pid_card.c  intelligent_pid_card.h  menu_list.c  menu_list.h  notification_popup.c  notification_popup.h  sensor_card.c  sensor_card.h  status_bar.c  status_bar.h
components/mesh_network/: CMakeLists.txt  mesh_network.c  mesh_network.h
components/mobile_app_interface/: CMakeLists.txt  CMakeLists.txt.disabled  mobile_app_interface.c  mobile_app_interface.h
components/mqtt_client/: CMakeLists.txt.disabled  mqtt_client.c  mqtt_client.h
components/network_manager/: CMakeLists.txt  CMakeLists.txt.disabled  network_manager.c  network_manager.h
components/notification_system/: CMakeLists.txt  notification_system.c  notification_system.h
components/ota_update/: CMakeLists.txt  ota_update.h
components/peristaltic_pump/: CMakeLists.txt  peristaltic_pump.c  peristaltic_pump.h
components/ph_ec_controller/: CMakeLists.txt  ph_ec_controller.c  ph_ec_controller.h
components/pid_auto_tuner/: CMakeLists.txt  pid_auto_tuner.c  pid_auto_tuner.h
components/pid_controller/: CMakeLists.txt  pid_controller.c  pid_controller.h
components/pump_manager/: CMakeLists.txt  pump_manager.c  pump_manager.h
components/sht3x/: sht3x.c  (+2 more)
components/system_tasks/: CMakeLists.txt  system_tasks.c  system_tasks.h
docs/: AUTOMATION_IMPROVEMENT_PLAN.md
main/: CMakeLists.txt  CMakeLists_test.txt  Kconfig.projbuild  README_FONT_ICONS.md  app_main.c  app_main_optimized.c  comprehensive_debug.c  idf_component.yml  iot_config.h  iot_integration.c  iot_integration.h  lvgl_touch_test.c  montserrat14_ru.c  montserrat14_ru.h  relay_auto_switch_test.c  system_config.h  touch_debug_test.c  touch_log_test.c  touch_test.c  xpt2046_debug.c
(+1362 files in other folders)
