idf_component_register(
    SRCS "app_main.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        driver
        freertos
        nvs_flash
        spi_flash
        lvgl
        system_tasks
        i2c_bus
        sht3x
        ccs811
        trema_ph
        trema_ec
        trema_lux
        lvgl_main
        encoder
        peristaltic_pump
        lcd_ili9341
        trema_relay
        sensor_screens
        ui_manager
        config_manager
        notification_system
        data_logger
        task_scheduler
        system_interfaces
        ph_ec_controller
)