idf_component_register(
    SRCS "app_main.c" "montserrat14_ru.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        driver
        freertos
        nvs_flash
        spi_flash
        lvgl__lvgl
        lvgl_ui
        system_tasks
        i2c_bus
        sht3x
        ccs811
        trema_ph
        trema_ec
        trema_lux
        encoder
        peristaltic_pump
        lcd_ili9341
        trema_relay
        config_manager
        sensor_manager
        notification_system
        error_handler
        data_logger
        task_scheduler
        system_interfaces
        ph_ec_controller
        pump_manager
        adaptive_pid
        pid_auto_tuner
        trend_predictor
)