# Temporarily disabled due to compilation errors
# idf_component_register(
#     SRCS "network_manager.c"
#     INCLUDE_DIRS "."
#     PRIV_REQUIRES
#         driver
#         freertos
#         esp_wifi
#         esp_event
#         nvs_flash
#         esp_eth
#         esp_http_server
#         esp_http_client
#         esp_https_ota
#         app_update
#         main
#         ph_ec_controller
#         system_interfaces
# )

